logs/tracking/build.make.004.log.stderr
In file included from /opt/ros/indigo/include/ros/ros.h:40:0,
                 from /home/elikos/tracking_ws/src/tracking/tracking.cpp:2:
/home/elikos/tracking_ws/src/tracking/tracking.cpp: In function ‘void subCallback(const ConstPtr&)’:
/opt/ros/indigo/include/ros/console.h:342:176: warning: too many arguments for format [-Wformat-extra-args]
     ::ros::console::print(filter, __rosconsole_define_location__loc.logger_, __rosconsole_define_location__loc.level_, __FILE__, __LINE__, __ROSCONSOLE_FUNCTION__, __VA_ARGS__)
                                                                                                                                                                                ^
/opt/ros/indigo/include/ros/console.h:345:5: note: in expansion of macro ‘ROSCONSOLE_PRINT_AT_LOCATION_WITH_FILTER’
     ROSCONSOLE_PRINT_AT_LOCATION_WITH_FILTER(0, __VA_ARGS__)
     ^
/opt/ros/indigo/include/ros/console.h:375:7: note: in expansion of macro ‘ROSCONSOLE_PRINT_AT_LOCATION’
       ROSCONSOLE_PRINT_AT_LOCATION(__VA_ARGS__); \
       ^
/opt/ros/indigo/include/ros/console.h:557:35: note: in expansion of macro ‘ROS_LOG_COND’
 #define ROS_LOG(level, name, ...) ROS_LOG_COND(true, level, name, __VA_ARGS__)
                                   ^
/opt/ros/indigo/include/rosconsole/macros_generated.h:110:23: note: in expansion of macro ‘ROS_LOG’
 #define ROS_INFO(...) ROS_LOG(::ros::console::levels::Info, ROSCONSOLE_DEFAULT_NAME, __VA_ARGS__)
                       ^
/home/elikos/tracking_ws/src/tracking/tracking.cpp:8:3: note: in expansion of macro ‘ROS_INFO’
   ROS_INFO("I heard: [%f]", msg->x, msg->y, msg->z);
   ^
In file included from /opt/ros/indigo/include/ros/ros.h:40:0,
                 from /home/elikos/tracking_ws/src/tracking/dummy_pos.cpp:3:
/home/elikos/tracking_ws/src/tracking/dummy_pos.cpp: In function ‘int main(int, char**)’:
/home/elikos/tracking_ws/src/tracking/dummy_pos.cpp:28:24: error: ‘geometry_msgs::Point’ has no member named ‘c_str’
     ROS_INFO("%s", msg.c_str());
                        ^
/opt/ros/indigo/include/ros/console.h:342:165: note: in definition of macro ‘ROSCONSOLE_PRINT_AT_LOCATION_WITH_FILTER’
     ::ros::console::print(filter, __rosconsole_define_location__loc.logger_, __rosconsole_define_location__loc.level_, __FILE__, __LINE__, __ROSCONSOLE_FUNCTION__, __VA_ARGS__)
                                                                                                                                                                     ^
/opt/ros/indigo/include/ros/console.h:375:7: note: in expansion of macro ‘ROSCONSOLE_PRINT_AT_LOCATION’
       ROSCONSOLE_PRINT_AT_LOCATION(__VA_ARGS__); \
       ^
/opt/ros/indigo/include/ros/console.h:557:35: note: in expansion of macro ‘ROS_LOG_COND’
 #define ROS_LOG(level, name, ...) ROS_LOG_COND(true, level, name, __VA_ARGS__)
                                   ^
/opt/ros/indigo/include/rosconsole/macros_generated.h:110:23: note: in expansion of macro ‘ROS_LOG’
 #define ROS_INFO(...) ROS_LOG(::ros::console::levels::Info, ROSCONSOLE_DEFAULT_NAME, __VA_ARGS__)
                       ^
/home/elikos/tracking_ws/src/tracking/dummy_pos.cpp:28:5: note: in expansion of macro ‘ROS_INFO’
     ROS_INFO("%s", msg.c_str());
     ^
make[2]: *** [CMakeFiles/dummy_pos_node.dir/dummy_pos.cpp.o] Error 1
make[1]: *** [CMakeFiles/dummy_pos_node.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
CMakeFiles/tracking_node.dir/tracking.cpp.o: In function `subCallback(boost::shared_ptr<geometry_msgs::Point_<std::allocator<void> > const> const&)':
tracking.cpp:(.text+0x12): undefined reference to `ros::console::g_initialized'
tracking.cpp:(.text+0x22): undefined reference to `ros::console::initialize()'
tracking.cpp:(.text+0x6b): undefined reference to `ros::console::initializeLogLocation(ros::console::LogLocation*, std::string const&, ros::console::levels::Level)'
tracking.cpp:(.text+0xa6): undefined reference to `ros::console::setLogLocationLevel(ros::console::LogLocation*, ros::console::levels::Level)'
tracking.cpp:(.text+0xb0): undefined reference to `ros::console::checkLogLocationEnabled(ros::console::LogLocation*)'
tracking.cpp:(.text+0x146): undefined reference to `ros::console::print(ros::console::FilterBase*, void*, ros::console::levels::Level, char const*, int, char const*, char const*, ...)'
CMakeFiles/tracking_node.dir/tracking.cpp.o: In function `main':
tracking.cpp:(.text+0x1e1): undefined reference to `ros::init(int&, char**, std::string const&, unsigned int)'
tracking.cpp:(.text+0x23d): undefined reference to `ros::NodeHandle::NodeHandle(std::string const&, std::map<std::string, std::string, std::less<std::string>, std::allocator<std::pair<std::string const, std::string> > > const&)'
tracking.cpp:(.text+0x312): undefined reference to `ros::spin()'
tracking.cpp:(.text+0x326): undefined reference to `ros::Subscriber::~Subscriber()'
tracking.cpp:(.text+0x335): undefined reference to `ros::NodeHandle::~NodeHandle()'
tracking.cpp:(.text+0x393): undefined reference to `ros::NodeHandle::~NodeHandle()'
tracking.cpp:(.text+0x3c4): undefined reference to `ros::NodeHandle::~NodeHandle()'
tracking.cpp:(.text+0x3f5): undefined reference to `ros::Subscriber::~Subscriber()'
tracking.cpp:(.text+0x42c): undefined reference to `ros::Subscriber::~Subscriber()'
tracking.cpp:(.text+0x440): undefined reference to `ros::Subscriber::~Subscriber()'
tracking.cpp:(.text+0x454): undefined reference to `ros::NodeHandle::~NodeHandle()'
CMakeFiles/tracking_node.dir/tracking.cpp.o: In function `ros::Subscriber ros::NodeHandle::subscribe<geometry_msgs::Point_<std::allocator<void> > >(std::string const&, unsigned int, void (*)(boost::shared_ptr<geometry_msgs::Point_<std::allocator<void> > const> const&), ros::TransportHints const&)':
tracking.cpp:(.text._ZN3ros10NodeHandle9subscribeIN13geometry_msgs6Point_ISaIvEEEEENS_10SubscriberERKSsjPFvRKN5boost10shared_ptrIKT_EEERKNS_14TransportHintsE[_ZN3ros10NodeHandle9subscribeIN13geometry_msgs6Point_ISaIvEEEEENS_10SubscriberERKSsjPFvRKN5boost10shared_ptrIKT_EEERKNS_14TransportHintsE]+0xfd): undefined reference to `ros::NodeHandle::subscribe(ros::SubscribeOptions&)'
CMakeFiles/tracking_node.dir/tracking.cpp.o: In function `ros::SubscriptionCallbackHelperT<boost::shared_ptr<geometry_msgs::Point_<std::allocator<void> > const> const&, void>::deserialize(ros::SubscriptionCallbackHelperDeserializeParams const&)':
tracking.cpp:(.text._ZN3ros27SubscriptionCallbackHelperTIRKN5boost10shared_ptrIKN13geometry_msgs6Point_ISaIvEEEEEvE11deserializeERKNS_43SubscriptionCallbackHelperDeserializeParamsE[_ZN3ros27SubscriptionCallbackHelperTIRKN5boost10shared_ptrIKN13geometry_msgs6Point_ISaIvEEEEEvE11deserializeERKNS_43SubscriptionCallbackHelperDeserializeParamsE]+0x49): undefined reference to `ros::console::g_initialized'
tracking.cpp:(.text._ZN3ros27SubscriptionCallbackHelperTIRKN5boost10shared_ptrIKN13geometry_msgs6Point_ISaIvEEEEEvE11deserializeERKNS_43SubscriptionCallbackHelperDeserializeParamsE[_ZN3ros27SubscriptionCallbackHelperTIRKN5boost10shared_ptrIKN13geometry_msgs6Point_ISaIvEEEEEvE11deserializeERKNS_43SubscriptionCallbackHelperDeserializeParamsE]+0x59): undefined reference to `ros::console::initialize()'
tracking.cpp:(.text._ZN3ros27SubscriptionCallbackHelperTIRKN5boost10shared_ptrIKN13geometry_msgs6Point_ISaIvEEEEEvE11deserializeERKNS_43SubscriptionCallbackHelperDeserializeParamsE[_ZN3ros27SubscriptionCallbackHelperTIRKN5boost10shared_ptrIKN13geometry_msgs6Point_ISaIvEEEEEvE11deserializeERKNS_43SubscriptionCallbackHelperDeserializeParamsE]+0xa2): undefined reference to `ros::console::initializeLogLocation(ros::console::LogLocation*, std::string const&, ros::console::levels::Level)'
tracking.cpp:(.text._ZN3ros27SubscriptionCallbackHelperTIRKN5boost10shared_ptrIKN13geometry_msgs6Point_ISaIvEEEEEvE11deserializeERKNS_43SubscriptionCallbackHelperDeserializeParamsE[_ZN3ros27SubscriptionCallbackHelperTIRKN5boost10shared_ptrIKN13geometry_msgs6Point_ISaIvEEEEEvE11deserializeERKNS_43SubscriptionCallbackHelperDeserializeParamsE]+0xdc): undefined reference to `ros::console::setLogLocationLevel(ros::console::LogLocation*, ros::console::levels::Level)'
tracking.cpp:(.text._ZN3ros27SubscriptionCallbackHelperTIRKN5boost10shared_ptrIKN13geometry_msgs6Point_ISaIvEEEEEvE11deserializeERKNS_43SubscriptionCallbackHelperDeserializeParamsE[_ZN3ros27SubscriptionCallbackHelperTIRKN5boost10shared_ptrIKN13geometry_msgs6Point_ISaIvEEEEEvE11deserializeERKNS_43SubscriptionCallbackHelperDeserializeParamsE]+0xe6): undefined reference to `ros::console::checkLogLocationEnabled(ros::console::LogLocation*)'
tracking.cpp:(.text._ZN3ros27SubscriptionCallbackHelperTIRKN5boost10shared_ptrIKN13geometry_msgs6Point_ISaIvEEEEEvE11deserializeERKNS_43SubscriptionCallbackHelperDeserializeParamsE[_ZN3ros27SubscriptionCallbackHelperTIRKN5boost10shared_ptrIKN13geometry_msgs6Point_ISaIvEEEEEvE11deserializeERKNS_43SubscriptionCallbackHelperDeserializeParamsE]+0x152): undefined reference to `ros::console::print(ros::console::FilterBase*, void*, ros::console::levels::Level, char const*, int, char const*, char const*, ...)'
CMakeFiles/tracking_node.dir/tracking.cpp.o: In function `void ros::serialization::Serializer<double>::read<ros::serialization::IStream>(ros::serialization::IStream&, double&)':
tracking.cpp:(.text._ZN3ros13serialization10SerializerIdE4readINS0_7IStreamEEEvRT_Rd[_ZN3ros13serialization10SerializerIdE4readINS0_7IStreamEEEvRT_Rd]+0x53): undefined reference to `ros::serialization::throwStreamOverrun()'
collect2: error: ld returned 1 exit status
make[2]: *** [/home/elikos/tracking_ws/devel/.private/tracking/lib/tracking/tracking_node] Error 1
make[1]: *** [CMakeFiles/tracking_node.dir/all] Error 2
make: *** [all] Error 2
